250207 youtubefork clone 코딩 (아이디 중복체크, 비밀번호 재설정 구현 진행중)

--- a/src/main/resources/templates/mgr/member/list.html
+++ b/src/main/resources/templates/mgr/member/list.html
@@ -20,17 +20,17 @@
             <tbody>
             <tr th:each="post, iterStat : ${posts}">
                 <td class="border px-4 py-2" th:text="${iterStat.index + 1}"></td>
-                <td class="border px-4 py-2">
-                    <a th:href="@{'/mgr/members/' + ${post.memberSeq}}" class="text-blue-500 hover:underline" th:text="${post.memberNick}"></a>
-                </td>
+                <td class="border px-4 py-2" th:text="${post.memberNick}"></td>
                 <td class="border px-4 py-2" th:text="${post.memberId}"></td>
-                <td class="border px-4 py-2" th:text="${post.useYn}"></td>
+                <td class="border px-4 py-2">
+                    <span th:text="${post.useYn}"></span>
+                    <a th:href="@{'/mgr/members/' + ${post.memberSeq} + '/useyn'}" class="bg-blue-500 text-white my-8 px-2 py-2">정지</a>
+                </td>
                 <td class="border px-4 py-2" th:text="${post.regDate}"></td>
                 <td class="border px-4 py-2" th:text="${post.videoCnt}"></td>
             </tr>
             </tbody>
         </table>
-
         <!-- 페이징 -->
     <div th:replace="fragments/pagination :: paginationFragment"></div>
     </main>
